--- a/dia1/index.html
+++ b/dia1/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div data-js="app" class="app"></div>
+    <button data-js="toggle-visibility">Esconder conteúdo</button>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
