Complete day 3 exercise 1

--- a/dia3/index.html
+++ b/dia3/index.html
@@ -7,6 +7,10 @@
     <title>Dia 3</title>
   </head>
   <body>
+    <form>
+      <label for="name">Nome:</label>
+      <input type="text" id="name" data-js="name" />
+    </form>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
