Complete day 3 exercise 2

--- a/dia3/index.html
+++ b/dia3/index.html
@@ -7,7 +7,7 @@
     <title>Dia 3</title>
   </head>
   <body>
-    <form>
+    <form data-js="form">
       <label for="name">Nome:</label>
       <input type="text" id="name" data-js="name" />
     </form>
