Complete day 4 exercise 3

--- a/dia4/app/index.html
+++ b/dia4/app/index.html
@@ -21,7 +21,7 @@
 
         <div>
           <label for="year">Ano</label>
-          <input type="number" name="year" id="year" />
+          <input type="number" name="year" id="year" min="1900" max="2021" />
         </div>
 
         <div>
