--- a/dia4/app/index.html
+++ b/dia4/app/index.html
@@ -45,6 +45,7 @@
             <th>Ano</th>
             <th>Placa</th>
             <th>Cor</th>
+            <th>Ações</th>
           </tr>
         </thead>
 
